--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://BogdanBon.github.io/team-project-JS",
+  "homepage": "https://mashtalerleonid.github.io/team-project-js-refractored",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team-project-JS/"
+    "build": "parcel build src/*.html --public-url /team-project-js-refractored/"
   },
   "repository": {
     "type": "git",
